--- a/index.html
+++ b/index.html
@@ -74,7 +74,24 @@
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 <script>
-  // Add your code here!
+  $(function() {
+    console.log("Let’s get ready to party with jQuery!");
+  });
+  $("article img").addClass("image-center");
+  $("p").last().remove();
+  $("h1").css("font-size", "40px");
+  $("aside li:last-child").append('<li>test text</li>');
+  $("aside").empty().append('<p>no more list yay</p>');
+  $(".form-control").on('keyup', function () {
+      let red = $(".form-control").eq(0).val();
+      let blue = $(".form-control").eq(1).val();
+      let green = $(".form-control").eq(2).val();
+      $("body").css("background-color",
+      "rgb(" + red + "," + green + "," + blue + ")");
+    });
+  $("img").on('click', function () {
+    $(this).remove();
+    });
 </script>
 </body>
 
